--- a/index.html
+++ b/index.html
@@ -75,13 +75,14 @@
             <article><h3>АО "ЦЭНКИ" - КЦ "Южный"</h3>
                 С 2011 по 2016 работала специалистом в АО "ЦЭНКИ" - КЦ "Южный". 
                 <br>Участвовала в запусках РКН «Зенит-2SБ» с аппаратами: "Амос-4" (2013 год) и "Электро-Л № 2" (2015 год)
-                <!-- Блок с видео нагло скопипащен с сайта Роскосмоса -->
+                <!-- Блок с видео нагло скопипащен с сайта Роскосмоса, только размер окошка подкорректирован -->
                 <iframe width="280" height="155" src="https://www.youtube.com/embed/h3UOI3OdCfs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe> 
             </article>
             
             <article><h3>БФ АО "РКЦ "Прогресс"</h3>
                 С 2016 года по н/в работаю в БФ АО "РКЦ "Прогресс". <br>
                 Разрабатываем планы подготовки изделий, пишем отчеты о подготовке и пусках. <br>
+                <img src="./src/soyuz_2.jpg" height="350"><br>
                 Обеспечиваем готовность наземного оборудования. 
             </article>
         </section>
@@ -89,11 +90,11 @@
         
         <section id="projects"><h2>Проекты</h2>
             <article><h3>Курсовая</h3>
-                <blockquote>Составлена тестовая документация (чек-лист и тест-кейсы) на
+                <blockquote cite="https://github.com/Satura/Coursework-IQA">Составлена тестовая документация (чек-лист и тест-кейсы) на
                     отдельные модули и функциональности тестового сайта </blockquote>
             </article>
             <article><h3>Дипломная</h3>
-                <blockquote>Проведена автоматизация тестирования учебного комплексного
+                <blockquote cite="https://github.com/Satura/DiplomaQA">Проведена автоматизация тестирования учебного комплексного
                     веб-сервиса, взаимодействующего с СУБД и API Банка.</blockquote>
             </article>
             <article><h3>Telegram-бот</h3>
