--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
             <address id="contacts"> 
                 <a href="https://www.linkedin.com/in/anastasiya-svitavskaya-573a4a248/" target="_blank"><img src="./src/linkedin(1).png" height="32">LinkedIn</a>
                 <a href="https://career.habr.com/svitavskaya_a" target="_blank"><img src="./src/habr(1).svg" height="32">Хабр.Карьера</a> 
+                <a href="mailto:svitavskaya.anastasiya@yandex.ru"><img src="./src/mail.png" height="32">E-mail</a>
             </address>   
         
         </footer>
