--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
         <section id="job"><h2>Работа</h2>
             <article><h3>АО "ЦЭНКИ" - КЦ "Южный"</h3>
                 С 2011 по 2016 работала специалистом в АО "ЦЭНКИ" - КЦ "Южный". 
-                <br>Участвовала в запусках РКН «Зенит-2SБ» с аппаратами: "Амос-4" (2013 год) и "Электро-Л № 2" (2015 год)
+                <br>Участвовала в запусках РКН «Зенит-2SБ» с аппаратами: "Амос-4" (2013 год) и "Электро-Л № 2" (2015 год)<>
+                <br>
                 <!-- Блок с видео нагло скопипащен с сайта Роскосмоса, только размер окошка подкорректирован -->
                 <iframe width="280" height="155" src="https://www.youtube.com/embed/h3UOI3OdCfs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe> 
             </article>
