--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
             <div class="contacts_nav">
                 <li class="contact"><a href="https://www.linkedin.com/in/anastasiya-svitavskaya-573a4a248/" target="_blank"><img src="./src/linkedin(2).png" height="24"></a></li> 
                 <li class="contact"><a href="https://career.habr.com/svitavskaya_a" target="_blank"><img src="./src/habr(1).svg" height="24"></a> </li>
-                <li class="contact"><a href="mailto:svitavskaya.anastasiya@yandex.ru"><img src="./src/mail.png" height="24"></a></li>
-                <li class="contact"></li>
+                <!-- <li class="contact"><a href="mailto:svitavskaya.anastasiya@yandex.ru"><img src="./src/mail.png" height="24"></a></li> -->
                 <li class="contact"><a href="https://t.me/Ephemera613" target="_blank"><img src="./src/tg.png" height="24"></a></li>
                 <li class="contact"></li>
 
@@ -34,8 +33,8 @@
                 QA-engineer</p>
             <section id="about"><h2>О себе</h2>
 
-                <p>Родилась в 1992 году на Байконуре, где живу и работаю.</p>
-                <p>Имею намерение постичь профессию QA-инженера, перейти в эту сферу и переехать на большую землю.</p>
+                <p>Живу и работаю на Байконуре.</p>
+                <p>Намерена постичь профессию QA-инженера, перейти в эту сферу и переехать на большую землю.</p>
             </section>
             
             <section id="edu"><h2>Образование</h2>
