update study and projects block

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
                     <li><a href="https://clck.ru/sbvQ4" target="_blank">«Интерактивный тренажер по SQL»</a> (Дальневосточный федеральный университет)</li>
                     <li><a href="https://clck.ru/36aiXi" target="_blank">«Тестирование ПО: Автоматизация и Программирование. Python. Selenium»</a> (Алекс Смит)</li>
                     <li><a href="https://clck.ru/36aiZm" target="_blank">«Тестирование ПО с нуля. Теория + Практика»</a> (Артём Русов)</li>
+                    <li><a href="https://stepik.org/course/120679/info" target="_blank">«Тестирование ПО: Postman для тестирования API»</a> (Константин Барзаковский)</li>
+
     
                 </article>
             
@@ -100,6 +102,11 @@
                     <div class="project-container">
                         <div class="project-head"><a href="https://github.com/Satura/TestTheoryProject"><h3>Тест сайта "Айти-агентства Фьюче"</h3></a></div>
                         <div class="project-body">Разработаны и оформлены чек-листы, тест-кейсы, проведено тестирование и оформлены баг-репорты на функции, локализацию и GUI сайта.</div>
+                    </div>
+
+                    <div class="project-container">
+                        <div class="project-head"><a href="https://github.com/Satura/API_final_project"><h3>Тестирование API Restful-Booker</h3></a></div>
+                        <div class="project-body">Разработаны чек-листы и тест-кейсы на функции API, созданы Postman-коллекции.</div>
                     </div>
                 </div>
             </section>
