update study and projects block

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>       
         <aside>
             <nav>
-                <p><a href="#contacts">О себе</a></p>
+                <p><a href="#about">О себе</a></p>
                 <p><a href="#edu">Образование</a></p>
                 <p><a href="#projects">Проекты</a></p>
                 <p><a href="#job">Работа</a></p>
