update study and projects block

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
                     <br>В рамках модуля по SQL проведен анализ датасета <a href="https://github.com/Satura/SQL_final_project/tree/main"><strong>LinkedIn Job Postings – 2023</strong></a>
                     <br>Выполнен проект по закреплению теории тестирования и отработке написания тестовой документации, в рамках которого проведена проверка сайта <a href="https://future-group.ru"><strong>"Айти-агентство Фьюче"</strong></a>
                     <blockquote>"создаем и развиваем сайты, сервисы и приложения"</blockquote>
+                    <br>Выполнен проект по тестированию <a href="https://github.com/Satura/API_final_project"><strong>API</strong></a>
+
                 </article>
                 
                 <article><h3>Дополнительные курсы</h3>
